# amanita

./: .hgignore  CMakeLists.txt  Copyright.txt
include/: CMakeLists.txt
include/ama/: CMakeLists.txt  binary_tree.hpp  multi_array.hpp  tensor.hpp
include/ama/binary_tree/: binary_search_tree.hpp
include/ama/binary_tree/detail/: binary_search_tree_node.hpp  binary_tree.hpp  binary_tree_node.hpp
include/ama/common/: CMakeLists.txt  array.hpp  pointer_wrapper.hpp  size_t.hpp
include/ama/multi_array/: CMakeLists.txt  config.hpp  get.hpp  multi_array.hpp
include/ama/multi_array/detail/: CMakeLists.txt  index_compiletime.hpp  index_runtime.hpp  multi_index.hpp  size.hpp
include/ama/tensor/: CMakeLists.txt  config.hpp  copy.hpp  get.hpp  iexp.hpp  index.hpp  mul.hpp  operator.hpp  outer.hpp  tensor.hpp
include/ama/tensor/detail/: CMakeLists.txt  copy.hpp  is_same_tensor.hpp  tensor_base.hpp  tensor_cwise_binary.hpp  tensor_cwise_unary.hpp  tensor_outer.hpp
include/ama/tensor/iexp/: CMakeLists.txt  iexp.hpp  iexp_base.hpp  iexp_calculator.hpp  iexp_constant.hpp  iexp_copy.hpp  iexp_cwise_binary.hpp  iexp_cwise_unary.hpp  iexp_factory.hpp  iexp_mutable.hpp  iexp_outer.hpp  iexp_temporary.hpp  index_reorder.hpp  indices.hpp  is_same_iexp.hpp  sum.hpp  tensor_reducer.hpp
include/ama/tensor/mul/: CMakeLists.txt  mul_calculator.hpp  mul_factory.hpp  mul_outer.hpp  mul_reducer.hpp  mul_temporary.hpp
test/: CMakeLists.txt  array.cpp  binary_tree.cpp  multi_array.cpp  tensor.cpp
